--- a/rating.html
+++ b/rating.html
@@ -474,4 +474,249 @@
               <td class="col-team">-</td>
               <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
               <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
-              <td class="col-stage"><div class="stage-cell"><span class="stage-plac
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-points"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 10 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">10</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-points"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 11 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">11</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-points"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 12 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">12</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-points"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 13 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">13</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-points">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-пoints"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 14 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">14</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-пoints"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 15 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">15</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-пoints"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 16 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">16</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-пoints"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 17 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">17</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-пoints"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+            <!-- 18 -->
+            <tr class="row-qualified">
+              <td class="col-place">
+                <div class="place-wrap">
+                  <span class="place-num">18</span>
+                  <span class="move move--same">–</span>
+                </div>
+              </td>
+              <td class="col-team">-</td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-stage"><div class="stage-cell"><span class="stage-place">-</span><span class="stage-пoints">/ -</span></div></td>
+              <td class="col-пoints"><b>-</b></td>
+              <td class="col-weight">-</td>
+              <td class="col-big">-</td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+
+      <p class="rating-note">
+        Підсумкове місце сезону визначається так:
+        <b>1)</b> менша сума балів сезону — краще місце;
+        <b>2)</b> якщо бали однакові — вище команда з більшою загальною вагою;
+        <b>3)</b> якщо вага теж однакова — вище команда з більшим Big Fish.
+        У колонках етапів показано <b>місце / набрані бали</b>. Незаповнені етапи відображаються як <b>– / –</b>
+        і не враховуються до суми, поки етап не завершено.
+      </p>
+
+      <!-- Блок претендентів -->
+      <h4 class="subhead">
+        Претенденти на участь у Фіналі сезону
+        <span>— команди, що знаходяться нижче 18-го місця</span>
+      </h4>
+
+      <div class="season-table-wrapper">
+        <table class="table table--season table--contenders">
+          <thead>
+            <tr>
+              <th class="col-place">Місце / рух</th>
+              <th class="col-team">Команда</th>
+              <th class="col-stage">Е1 м/б</th>
+              <th class="col-stage">Е2 м/б</th>
+              <th class="col-stage">Е3 м/б</th>
+              <th class="col-stage">Е4 м/б</th>
+              <th class="col-stage">Е5 м/б</th>
+              <th class="col-stage">Фінал м/б</th>
+              <th class="col-points">Бали сезону</th>
+              <th class="col-weight">Загал вага, кг</th>
+              <th class="col-big">Big Fish сезону, кг</th>
+            </tr>
+          </thead>
+          <tbody id="season-contenders">
+            <!-- Сюди потім JS буде додавати місця 19+ -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </section>
+</main>
+
+<footer class="footer">
+  <div class="container footer__row">
+    <div>© 2025 STOLAR CARP · Львівщина</div>
+    <div class="footer__links">
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh" rel="noopener">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9" rel="noopener">YouTube</a>
+    </div>
+  </div>
+</footer>
+</body>
+</html>
