--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   font-size:clamp(40px,7vw,64px);
   font-weight:900;
   letter-spacing:.06em;
-  margin:0 0 38px;
+  margin:0 0 36px;
   text-transform:uppercase;
 
   /* твій градієнт */
@@ -69,37 +69,35 @@
   background-clip:text;
   color:transparent;
 
-  /* 3D + преміум-обробка */
+  /* ЧІТКИЙ 3D без «каші» */
   text-shadow:
-    0px 1px 0px rgba(255,255,255,0.35),   /* верхній блік */
-    0px -2px 3px rgba(0,0,0,0.55),        /* внутрішня тінь, ефект гравірування */
-    0px 3px 6px rgba(0,0,0,0.75),         /* обʼємна нижня тінь */
-    0 0 14px rgba(255,183,0,0.6),         /* золоте світіння */
-    0 0 28px rgba(217,4,41,0.45);         /* глибоке бордове сяйво */
+    0 1px 0 rgba(255,255,255,0.25),   /* легкий верхній блік */
+    0 2px 0 rgba(160,110,0,0.85),     /* тонкий «край» під літерами */
+    0 3px 4px rgba(0,0,0,0.65);       /* одна основна тінь вниз */
 
   opacity:0;
-  transform:translateY(18px);
+  transform:translateY(14px);
   animation:heroTitleFade 0.9s ease-out forwards;
     }
     .hero-title::after{
+  co.hero-title::after{
   content:"";
   position:absolute;
   left:50%;
   transform:translateX(-50%);
-  bottom:-16px;
+  bottom:-14px;
 
-  width:260px;
+  width:240px;
   height:3px;
   border-radius:999px;
 
   background:linear-gradient(90deg,#ffd700 0%,#ff8c00 50%,#d90429 100%);
   box-shadow:
-    0 0 10px rgba(255,180,0,.6),
-    0 0 20px rgba(217,4,41,.45);
+    0 0 6px rgba(255,180,0,.6);   /* менше розмиття */
 
   opacity:0;
   animation:heroLineFade 1.1s ease-out forwards;
-    }
+  }
 
     .hero-subtitle{
       margin:14px auto 0;
