--- a/index.html
+++ b/index.html
@@ -61,26 +61,23 @@
   font-size:clamp(40px,7vw,64px);
   font-weight:900;
   letter-spacing:.06em;
-  margin:0 0 40px;
+  margin:0 0 36px;
   text-transform:uppercase;
 
-  /* ГРАДІЄНТНО-ЗОЛОТИЙ ТЕКСТ */
+  /* твій градієнт */
   background:linear-gradient(90deg,#ffd700 0%,#ff8c00 40%,#d90429 100%);
   -webkit-background-clip:text;
   background-clip:text;
   color:transparent;
 
-  /* ОБВОДКА БУКВ (3D-контур) */
-  -webkit-text-stroke:1px rgba(0,0,0,0.75);
-
-  /* ЛЕГКЕ 3D: тіні вниз */
+  /* БЕЗ stroke, тільки тіні = чіткий текст */
   text-shadow:
-    0 1px 0 rgba(255,255,255,0.35),   /* верхній блік */
-    0 2px 0 rgba(140,90,0,0.9),       /* край під літерами */
-    0 6px 12px rgba(0,0,0,0.85);      /* основна об’ємна тінь */
+    0 1px 0 rgba(255,255,255,0.3),    /* легкий блік зверху */
+    0 2px 0 rgba(140,90,0,0.9),       /* тонкий «край» під літерами */
+    0 5px 10px rgba(0,0,0,0.85);      /* основна 3D-тінь */
 
   opacity:0;
-  transform:translateY(16px);
+  transform:translateY(14px);
   animation:heroTitleFade 0.9s ease-out forwards;
     }
     .hero-title::before{
@@ -91,21 +88,19 @@
   top:50%;
   transform:translate(-50%,-50%);
 
-  /* зона підсвітки позаду тексту */
-  width:360px;
-  height:120px;
+  width:340px;
+  height:110px;
 
   background:
     radial-gradient(circle at 50% 40%,
-      rgba(255,215,0,0.35) 0%,
-      rgba(255,140,0,0.22) 35%,
-      rgba(217,4,41,0.18) 60%,
+      rgba(255,215,0,0.28) 0%,
+      rgba(255,140,0,0.18) 35%,
+      rgba(217,4,41,0.14) 60%,
       transparent 80%);
 
-  filter:blur(18px);
+  filter:blur(16px);
   opacity:0;
   pointer-events:none;
-
   animation:heroGlow 1.1s ease-out forwards 0.1s;
     }
     .hero-title::after{
@@ -113,7 +108,7 @@
   position:absolute;
   left:50%;
   transform:translateX(-50%);
-  bottom:-16px;
+  bottom:-14px;
 
   width:240px;
   height:3px;
@@ -330,6 +325,16 @@
     width:260px;
   }
 }
+    @keyframes heroGlow{
+  0%{
+    opacity:0;
+    transform:translate(-50%,-55%) scale(0.9);
+  }
+  100%{
+    opacity:1;
+    transform:translate(-50%,-50%) scale(1);
+  }
+    }
   </style>
 </head>
 <body class="home-page">
